# Programming-Languages

List-1/: CMakeLists.txt  main  main.cpp
List-1-Java/src/: Main.java
List-1-Java/src/NumberCoder/: NthBaseNumber.java  NthBaseRational.java  NumberCoder.java  UBaseCoder.java
List-1/Interfaces/: NumberCoder.h
List-1/NthBaseCalculatorLib/: CMakeLists.txt
List-1/NthBaseCalculatorLib/headers/: NthBase.h  NthBaseExceptions.h  NthBaseManip.h  NthBaseMath.h  NthBaseNumber.h  NthRational.h  NumberCoder.h  UBaseCoder.h
List-1/NthBaseCalculatorLib/src/: NthBaseManip.cpp  NthBaseMath.cpp  NthBaseNumber.cpp  NthRational.cpp  UBaseCoder.cpp
List-1/Tests/GoogleTests/: CMakeLists.txt  NthBaseNumberTest.cpp  UBaseCoderTest.cpp  test1.cpp
List-1/headers/: BinaryCoder.h  DecimalCoder.h  NthBaseNumber.h  NumberCoder.h  UBaseCoder.h
List-1/src/: BinaryCoder.cpp  DecimalCoder.cpp  NthBaseNumber.cpp
